fix(Dropdown): layout issue

--- a/src/components/common/Dropdown/styles.module.scss
+++ b/src/components/common/Dropdown/styles.module.scss
@@ -5,7 +5,7 @@
     }
 
     &__menu {
-      padding-block: 1rem;
+      padding-block: 0.25rem;
       border-radius: 0.375rem;
       border: 1px solid hsl(var(--gray-5-color));
       background-color: hsl(var(--white-color));
